Change packages structure and Launcher