@@ -2,10 +2,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>jila.lingualeo</groupId>
+    <groupId>com.github.ilyavy</groupId>
     <artifactId>lingualeo-book-reading-assistant</artifactId>
     <version>1.1.0</version>
     <name>English Book Reading Assistant</name>
+    <packaging>jar</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -36,7 +37,7 @@
         <build-helper-maven-plugin.version>3.2.0</build-helper-maven-plugin.version>
         <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
         <checkstyle-plugin.version>3.1.2</checkstyle-plugin.version>
-        <checkstyle.url>https://raw.githubusercontent.com/pepperkit/checkstyle/v1.0.0-9.0/checkstyle.xml</checkstyle.url>
+        <checkstyle.url>https://raw.githubusercontent.com/pepperkit/checkstyle/v1.0.1-9.1/checkstyle.xml</checkstyle.url>
         <jacoco-plugin.version>0.8.7</jacoco-plugin.version>
 
         <sonar.exclusions>**/model/api/*.java,**Launcher.java,**/parser/*.java</sonar.exclusions>
@@ -73,7 +74,17 @@
         <!-- Spring Boot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-autoconfigure</artifactId>
+            <artifactId>spring-boot-starter-data-r2dbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.2.6</version>
         </dependency>
 
         <!-- JavaFX -->
@@ -85,6 +96,11 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-web</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
             <version>${javafx.version}</version>
         </dependency>
         <dependency>
@@ -105,11 +121,6 @@
             <version>${javafx.version}</version>
             <classifier>mac</classifier>
         </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <version>12.0.2</version>
-        </dependency>
 
         <!-- Reactive -->
         <dependency>
@@ -128,37 +139,16 @@
             <version>1.0.12</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-r2dbc</artifactId>
-            <version>1.3.6</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>5.3.12</version>
-        </dependency>
+        <!-- Persistence -->
         <dependency>
             <groupId>io.r2dbc</groupId>
             <artifactId>r2dbc-h2</artifactId>
-            <version>0.9.0.M1</version>
+            <version>0.8.4.RELEASE</version>
         </dependency>
-        <dependency>
-            <groupId>io.r2dbc</groupId>
-            <artifactId>r2dbc-spi</artifactId>
-            <version>0.9.0.M2</version>
-        </dependency>
-
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>1.4.200</version>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>javax.annotation-api</artifactId>
-            <version>1.3.2</version>
         </dependency>
 
         <!-- Json -->
@@ -171,6 +161,18 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
+        </dependency>
+
+        <!-- Other -->
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.pepperkit</groupId>
+            <artifactId>retry</artifactId>
+            <version>1.0.0</version>
         </dependency>
 
         <!-- Testing -->
@@ -237,13 +239,13 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <compilerArgument>--enable-preview</compilerArgument>
-                    <source>17</source>
-                    <target>17</target>
+                    <!--<compilerArgument>&#45;&#45;enable-preview</compilerArgument>-->
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
 
                     <!-- Workaround for IDEA Java preview features bug -->
-                    <compilerArgs>--enable-preview</compilerArgs>
-                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
+                    <!--<compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
+                    <!--<forceJavacCompilerUse>true</forceJavacCompilerUse>-->
                 </configuration>
             </plugin>
 
@@ -295,7 +297,7 @@
                 </executions>
             </plugin>
 
-            <plugin>
+            <!--<plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>${maven-assembly-plugin.version}</version>
 
@@ -340,7 +342,7 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
